--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/Visit-hub-ori.svg" />
+    <link rel="icon" type="image/svg+xml" href="Visit-Hub/src/assets/Visit-hub-ori.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visit Hub</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="Visit-Hub/src/main.jsx"></script>
   </body>
 </html>
